[tool.poetry]
name = "dx-error-report"
version = "0.1.0"
description = ""
authors = ["Graeme-Smith <graeme_c_smith@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dx_report"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
